style.scss
$edge-padding: 20px;
$text-color: black;

@import "node_modules/font-awesome/scss/font-awesome.scss";
@import "collage.scss";

* {
    //font-family: "Arial Black", Arial !important;

    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    color: $text-color;
}

.primary-font {
    font-family: "Arial Black", Arial !important;
    word-spacing: 0.5em;
}

body {
}

#bg {
    position: fixed;
    top: 0; bottom: 0;
    left: 0; right: 0;
    background: url('../img/bg.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

a {
    color: $text-color;
    text-decoration: none;

    &:visited {
        color: $text-color;
    }
}

.hidden {
    display: none;
    visibility: hidden;
}

$logo-size: 40px;
#nts-logo {
    display: block;
    width: $logo-size;
    height: $logo-size;
    background-image: url('../img/NTS_LOGO_MASTER.png');
    background-size: $logo-size;
    position: absolute;

    &:hover {
        opacity: 0.75;
    }

    -webkit-transition: all 0.13s;
    -moz-transition: all 0.13s;
    -ms-transition: all 0.13s;
    -o-transition: all 0.13s;
    transition: all 0.13s;
}

/** Header */
$header-padding: 5px;
#header {
    position: absolute;
    top: 0;
    left: 0; right: 0;
    height: 80px;
    padding: $header-padding;

    overflow: auto;
    text-transform: uppercase;

    //background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
    //background: rgba(255,255,255,1);

    z-index: 10;
}
.header__left {
    float: left;
    width: 60px;
    height: 60px;
    padding: 9px 10px;
}
.header__right {
    position: absolute;

    top: 16px;
    right: 15px;
}
.header__radio-player {
    cursor: pointer;

    //background-image: url("../img/tapevlarge.png");
    //background-size: contain;
    //background-repeat: no-repeat;

}
.header__radio-player, .header__mixcloud-container {
    //margin: 0 auto;
    //max-width: 600px;
    //text-align: center;
    font-size: 1.2em;
}
.header__radio-player__text {
    display: inline-block;
    margin-top: 17px;
    margin-left: 6px;
}
.header__radio-player__handler {
    display: inline-block;
    vertical-align: bottom;
}
.header__mixcloud-container {

}

#pre-save-link, #pre-order-link {
    float: right;
    text-transform: uppercase;
    text-align: left;
    span {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: 100%;
        text-align: center;
    }
}
#pre-order-link {
    position: relative;
    display: block;
    width: 151px;
    height: 39px;

    background-image: url('../img/tapesmall.png');
    background-size: contain;
    background-repeat: no-repeat;

    margin-right: 15px;

    span {
        transform: translateY(-50%) rotate(0.5deg);
        padding-bottom: 2px;
    }
}
#pre-save-link {
    position: relative;
    display: block;
    width: 142px;
    height: 39px;

    background-image: url('../img/tapesmall_alt.png');
    background-size: contain;
    background-repeat: no-repeat;

    span {
        transform: translateY(-50%) rotate(-1deg);
        padding-right: 7px;
        padding-bottom: 2px;
    }
}

.radio-handler-icon {
    font-size: 1.3em;
    margin-left: 11px;
    margin-top: 2px;
}

#live-now-circle {
    color: #d40000;
    opacity: 0;

    -webkit-animation: flickerAnimation 2s infinite ;
    -moz-animation: flickerAnimation 2s infinite;
    -o-animation: flickerAnimation 2s infinite;
    animation: flickerAnimation 2s infinite;
}

#nts-player-audio {

}

/** Gallery */
$side-padding: 40px;
#gallery {
    position: absolute;
    top: 0; bottom: 0;
    left: 0; right:0;

    background: url('../img/bg.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    padding: $side-padding;
    text-align: center;

    z-index: 999999999;
}

.gallery--open {
    display: block;
}
.gallery--closed {
    display: none;
}
.gallery__img-container {
    position: absolute;
    top: 50%;
    left: $side-padding;
    right: $side-padding;

    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);

}
.gallery__img {
    display: block;
    max-height: 70vh;
    min-height: 400px;
    margin: 0 auto;
}
.gallery__title {
    margin: 0;
    margin-top: 16px;
    font-size: 28px;
    text-transform: uppercase;
}

#next-photo-icon, #prev-photo-icon, #close-gallery-icon {
    cursor: pointer;
    font-size: 3em;
}

$gallery-side-icon-spacing: 30px;
#next-photo-icon {
    position: absolute;
    top: 50%;
    right: $gallery-side-icon-spacing;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}
#prev-photo-icon {
    position: absolute;
    top: 50%;
    left: $gallery-side-icon-spacing;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}
#close-gallery-icon {
    position: absolute;
    top: 10px;
    right: $gallery-side-icon-spacing;
}

/** Mobile */
$mq-desktop: "(min-width: 1025px) and (max-width: 1499px)";
$mq-lg-desktop: "(min-width: 1500px)";
$mq-md-desktop: "(min-width: 1190px) and (max-width: 1499px)";
$mq-sm-desktop: "(min-width: 1025px) and (max-width: 1190px)";
$mq-tablet: "(min-width: 768px) and (max-width: 1024px)";
$mq-phone: "(max-width: 767px)";

img {
    max-width: 100%;
}

.gallery-mobile__item {
    margin: 60px 0;
    text-align: center;

    img {
        margin: 0 auto;
    }
    span {
        text-transform: uppercase;
    }
}

#radio-player-mobile {
    position: relative;
    height: 97vh;
    text-align: center;

    .header__radio-player {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        left: 0; right: 0;

        .header__radio-player__text {
            margin-top: 0;
            margin-left: 0;
        }
        .header__radio-player__handler {
            display: block;
            margin-bottom: 12px;
        }
        #live-now-circle {
            margin-left: 11px;
        }
        .live-now-label {
            padding-left: 35px;
        }
    }
}
.radio-player-mobile__logo {
    text-align: center;
    padding-top: 4vh;
    padding-bottom: 20px;

    #nts-logo {
        position: relative;
        display: inline-block;
        margin: 0 auto;
    }
}
.radio-player-mobile__links {
    margin: 0 auto;
    text-align: center;
    overflow: auto;
    >div {
        display: inline-block;
    }
}
#radio-player-mobile__down-arrow {
    position: absolute;
    width: 100%;
    font-size: 20px;
    bottom: 5px;
    text-align: center;

}

@media #{$mq-phone} {
    #bg {
        z-index: -1;
        background: url('../img/bg_mobile.jpg') no-repeat center center fixed;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
    }
    #collage-canvas {
        display: none;
    }
    #header {
        display: none;
    }

    #pre-save-link {
        width: 116px;
        span {
            padding-right: 1px;
            padding-bottom: 6px;
        }
    }
    #pre-order-link {
        width: 129px;
        span {
            padding-bottom: 6px;
        }
    }
}


/** Misc **/

.header-fuzzy-text {
    color: transparent !important;
    text-shadow: 0 0 1px rgba(250, 243, 220, 0.8);
}
.header-fuzzy-text--dark {
    text-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
}
.header-fuzzy-text--red {
    text-shadow: 0 0 1px rgba(212, 0, 0, 0.8);
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

/** Animations */
@keyframes flickerAnimation {
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-o-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}

